--- a/SampleDjangoApp/hello/templates/index.html
+++ b/SampleDjangoApp/hello/templates/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
+	<script>
+		function doSomething(pk)
+		{
+			var e = document.getElementById("rubrics");
+			var value = e.value;
+			window.location = "http://127.0.0.1:8000/catalog/" + value + "/";
+		}
+	</script>
   <body>
     <div class="container">
-		<div class="row panel-heading">
+		<div class="row">
 			<div class="col-sm">
 			  Title
 			</div>
@@ -17,7 +25,43 @@
 			<div class="col-sm">
 			  Price
 			</div>
+			<div class="col-sm">
+			  Date
+			</div>
+			<div class="col-sm">
+			  <form>
+				<select onchange="doSomething();" name="rubrics" id="rubrics">
+				{% for r in rubs %}
+					{% if r.pk == rub.pk %}
+						<option selected="selected" value="{{ r.pk }}">{{ r.name}}</a>
+					{% else %}
+						<option value="{{ r.pk }}">{{ r.name}}</a>
+					{% endif %}
+				{% endfor %}
+				</select>
+			  </form>
+			</div>
 		</div>
+		</div>
+		{% for bb in cdb %}
+		<div class="row">
+			<div class="col-sm">
+			  {{ bb.title}}
+			</div>
+			<div class="col-sm">
+			  {{ bb.content}}
+			</div>
+			<div class="col-sm">
+			  {{ bb.price}}
+			</div>
+			<div class="col-sm">
+			  {{ bb.published }}
+			</div>
+			<div class="col-sm">
+			  {{ rub.name }}
+			</div>
+		</div>
+		{% endfor %}
 	</div>
   </body>
 </html>
